# renderer-ii

./: .clang-format  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  sandbox
.gitea/workflows/: build.yaml
examples/: sandbox.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
examples/sandbox/src/sponza/glTF/: 2051777328469649772.ntex  2969916736137545357.ntex  3628158980083700836.ntex  3827035219084910048.ntex  466164707995436622.ntex  5792855332885324923.ntex  6772804448157695701.ntex  7268504077753552595.ntex  755318871556304029.ntex  8006627369776289000.ntex  8051790464816141987.ntex
examples/sandbox/src/testbox/: testbox.blend
examples/smol-ame-by-seafoam/: terrariumtex.ntex
examples/sponza/glTF/: 1219024358953944284.ntex  2775690330959970771.ntex  3455394979645218238.ntex  4871783166746854860.ntex  5061699253647017043.ntex  6047387724914829168.ntex  6593109234861095314.ntex  7056944414013900257.ntex  715093869573992647.ntex  7815564343179553343.ntex  8114461559286000061.ntex  8481240838833932244.ntex  8750083169368950601.ntex  9288698199695299068.ntex  Sponza.gltf
examples/testbox/: testbox.glb
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
gltf/: Cargo.toml
gltf/src/: gltf_json.rs  lib.rs  memory_measurement.rs  mesh_iter.rs  pending_gltf.rs  scene_queueing.rs
imgui-sdl2-support/: Cargo.toml
imgui-sdl2-support/src/: lib.rs
make-ntex/: Cargo.toml  README.md
make-ntex/src/: main.rs
renderer/: Cargo.toml  build.rs
renderer/shaders/glsl/: constants.glsl  imgui.frag  imgui.vert  main.frag  main.vert  render_res_pp.frag
renderer/shaders/glsl/variants/: main-skinned.vert  main-static.vert  render_res_pp-multisample.frag  render_res_pp-singlesample.frag
renderer/shaders/spirv/: imgui.frag.spv  imgui.vert.spv  main.frag.spv
renderer/shaders/spirv/variants/: main-skinned.vert.spv  main-static.vert.spv  render_res_pp-multisample.frag.spv  render_res_pp-singlesample.frag.spv
renderer/src/: arena.rs  debug_utils.rs  image_loading.rs  imgui_support.rs  include_words.rs  instance.rs  lib.rs  memory_measurement.rs  physical_device.rs  renderer.rs  uploader.rs  vertex_library.rs  vulkan_raii.rs
renderer/src/arena/: buffers.rs  images.rs
renderer/src/image_loading/: mod.rs  ntex.rs  pbr_defaults.rs
renderer/src/physical_device/: device_creation.rs  limits.rs  mod.rs  physical_device_features.rs
renderer/src/renderer/: camera.rs  coordinate_system.rs  descriptors.rs  framebuffers.rs  mod.rs  pipeline_parameters.rs  pipelines.rs  scene.rs  swapchain.rs
renderer/src/renderer/descriptors/: material.rs  mod.rs
renderer/src/renderer/pipeline_parameters/: constants.rs  render_passes.rs  uniforms.rs  vertex_buffers.rs
renderer/src/renderer/pipelines/: attachments.rs  framebuffers.rs  mod.rs  pipeline_parameters.rs  render_passes.rs
renderer/src/renderer/pipelines/pipeline_parameters/: mod.rs
renderer/src/renderer/scene/: camera.rs  coordinate_system.rs  draw_call_tag.rs  mesh.rs
renderer/src/vk-profiles/: VP_CUSTOM_profile_based_on_2022_baseline.json  VP_LUNARG_desktop_baseline_2023.json
shaders/: Cargo.toml  README.md
shaders/glsl/: constants.glsl  fullscreen.vert  main.frag  main.vert  render_res_pp.frag
shaders/glsl/variants/: main-skinned.vert  main-static.vert  render_res_pp-multisample.frag  render_res_pp-singlesample.frag
shaders/spirv/: fullscreen.vert.spv  main-skinned.vert.spv  main.frag.spv  main.vert.spv  render_res_pp.frag.spv
shaders/spirv/variants/: main-skinned.vert.spv  main-static.vert.spv  render_res_pp-multisample.frag.spv  render_res_pp-singlesample.frag.spv
shaders/src/: lib.rs
src/: arena.rs  buffer.rs  buffer_ops.rs  camera.rs  canvas.rs  debug_utils.rs  descriptors.rs  device.rs  driver.rs  error.rs  foundation.rs  framebuffers.rs  gltf.rs  gpu.rs  gpu_alloc.rs  image_loading.rs  include_words.rs  instance.rs  lib.rs  material.rs  memory_measurement.rs  mesh.rs  model.rs  physical_device.rs  physical_device_features.rs  pipeline.rs  pipeline_parameters.rs  pipelines.rs  render_pass.rs  renderer.rs  resources.rs  scene.rs  swapchain.rs  texture.rs  uploader.rs  vulkan_raii.rs
src/arena/: buffer.rs  simple_wrappers.rs
src/gltf/: gltf_json.rs  mesh_iter.rs  mod.rs  resources.rs  scene_queueing.rs
src/image_loading/: ktx.rs  mod.rs  ntex.rs
src/memory_measurement/: arena.rs  gltf.rs
src/physical_device/: device_creation.rs  limits.rs  mod.rs  physical_device_features.rs
src/pipeline_parameters/: constants.rs  limits.rs  mod.rs
src/renderer/: camera.rs  framebuffers.rs  mesh.rs  mod.rs  swapchain.rs
src/renderer/descriptors/: material.rs  mod.rs
src/renderer/pipelines/pipeline_parameters/: constants.rs  mod.rs
src/scene/: camera.rs  mod.rs
src/shaders/: constants.glsl  hud.frag  hud.vert  main.frag  main.vert  plain_color.frag  plain_color.vert  render_res_pp.frag  textured.frag  textured.vert
vk-profile/: Cargo.toml
vk-profile/src/: VP_LUNARG_desktop_baseline_2022.json  VP_LUNARG_desktop_portability_2022.json  lib.rs
