[package]
name = "neonvk"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
ash = { version = "0.37", default-features = false, features = ["linked", "debug"] }
ash-window = { version = "0.11" }
bytemuck = { version = "1.9" }
glam = { version = "0.23", default-features = false, features = ["libm", "bytemuck"] }
hashbrown = { version = "0.13", features = ["serde"] }
log = { version = "0.4" }
memmap2 = { version = "0.5" } # requires std
profiling = { version = "1.0" }
raw-window-handle = { version = "0.4" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracy-client = { version = "0.14.2", optional = true }
thiserror = { version = "1.0" }
typed-arena = { version = "2.0", default-features = false }

[dev-dependencies]
sdl2 = { version = "0.35", features = ["raw-window-handle"] }
anyhow = { version = "1.0" }

[[example]]
name = "sandbox"

[features]
profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-puffin = ["profiling/profile-with-puffin"]
vulkan-validation = []
