[package]
name = "gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
ash = { git = "https://github.com/ash-rs/ash", default-features = false, features = ["linked", "debug"] }
bytemuck = { version = "1.9" }
glam = { version = "0.23", default-features = false, features = ["libm", "bytemuck"] }
hashbrown = { version = "0.13", features = ["serde"] }
log = { version = "0.4" }
# requires std, only used by the gltf module
memmap2 = { version = "0.5" }
profiling = { version = "1.0" }
renderer = { path = "../renderer" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0" }
