[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
# requires std, but a PR for move to core+alloc exists (#664)
ash = { git = "https://github.com/ash-rs/ash", default-features = false, features = ["linked", "debug"] }
ash-window = { git = "https://github.com/ash-rs/ash" }
bytemuck = { version = "1.9", default-features = false, features = ["derive", "min_const_generics"] }
enum-map = { version = "2.7.3", default-features = false }
glam = { version = "0.23", default-features = false, features = ["libm", "bytemuck"] }
half = { version = "2.3.1", default-features = false, features = ["bytemuck"] }
hashbrown = { version = "0.13" }
log = { version = "0.4" }
profiling = { version = "1.0" }
raw-window-handle = { version = "0.5.1" }
# requires std, until error_in_core is stabilized
thiserror = { version = "1.0" }

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-puffin = ["profiling/profile-with-puffin"]
vulkan-validation = []
vulkan-debug-utils = []
