[package]
name = "shaders"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = { version = "^1.0.0" }
quote = { version = "^1.0.0" }
shaderc = { version = "^0.7.0" }
proc-macro2 = { version = "^1.0.0" }
proc-macro-error = { version = "^1.0.4", default-features = false }

[lib]
proc-macro = true

[features]
generate-debug-info = []
