[package]
name = "vk-profile"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
heck = "0.4.1"
once_cell = "1.17.1"
tinyjson = "2.5.1"

[features]
default = ["desktop_baseline_2022"]
android_baseline_2021 = []
android_baseline_2022 = []
desktop_baseline_2022 = []
desktop_baseline_2023 = []
desktop_portability_2022 = []
