[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.23", default-features = false, features = ["libm", "bytemuck"] }
gltf = { path = "../../gltf" }
imgui = { version = "0.12.0" }
imgui-sdl2-support = { path = "../../imgui-sdl2-support" }
log = { version = "0.4" }
profiling = { version = "1.0" }
renderer = { path = "../../renderer", features = ["imgui-support"] }
sdl2 = { version = "0.36.0", features = ["raw-window-handle"] }
thiserror = { version = "1.0" }
tracy-client = { version = "0.16.3", optional = true }

[features]
default = ["profile-with-tracing"]
profile-with-tracy = ["renderer/profile-with-tracy", "tracy-client"]
profile-with-tracing = ["renderer/profile-with-tracing"]
profile-with-puffin = ["renderer/profile-with-puffin"]
vulkan-validation = ["renderer/vulkan-validation", "renderer/vulkan-debug-utils"]
