[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bytemuck = { version = "1.9" }
glam = { version = "*", default-features = false } # Inherit version and features from renderer
log = { version = "0.4" }
renderer = { path = "../../renderer" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["raw-window-handle"] }

[features]
vulkan-validation = ["renderer/vulkan-validation", "renderer/vulkan-debug-utils"]
