[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bytemuck = { version = "1.9" }
glam = { version = "0.23", default-features = false, features = ["libm", "bytemuck"] }
log = { version = "0.4" }
renderer = { path = "../../renderer" }
sdl2 = { version = "0.36.0", features = ["raw-window-handle"] }

[features]
vulkan-validation = ["renderer/vulkan-validation", "renderer/vulkan-debug-utils"]
